Improved styling and mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -10,28 +10,36 @@
     <h1>OU Classification Calculator</h1>
     <div id="container">
         
-        <label for="modName">Module:</label>
-        <input id="modName" type="text">
+        <div>
+            <label for="modName">Module:</label>
+            <input id="modName" type="text">
+        </div>
 
-        <label for="level">Level:</label>
-        <select id="level" name="level">
-            <option value="2">2</option>
-            <option value="3">3</option>
-        </select>
+        <div>
+            <label for="level">Level:</label>
+            <select id="level" name="level">
+                <option value="2">2</option>
+                <option value="3">3</option>
+            </select>
+        </div>
 
-        <label for="class">Classification:</label>
-        <select id="class" name="class">
-            <option value="1">First Class</option>
-            <option value="2">Upper Second Class</option>
-            <option value="3">Lower Second Class</option>
-            <option value="4">Third Class</option>
-        </select>
+        <div>
+            <label for="class">Classification:</label>
+            <select id="class" name="class">
+                <option value="1">First Class</option>
+                <option value="2">Upper Second Class</option>
+                <option value="3">Lower Second Class</option>
+                <option value="4">Third Class</option>
+            </select>
+        </div>
 
-        <label for="credits">Credits:</label>
-        <select id="credits" name="credits">
-            <option value="30">30</option>
-            <option value="60">60</option>
-        </select>
+        <div>
+            <label for="credits">Credits:</label>
+            <select id="credits" name="credits">
+                <option value="30">30</option>
+                <option value="60">60</option>
+            </select>
+        </div>
 
         <button id="addModule">+</button>
 
