Adding user instructions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>OU Classification Calculator</title>
 </head>
 <body>
-    <h1>OU Classification Calculator</h1>
+    <h1>The Unofficial Open University Classification Calculator</h1>
+    <p id="description">Add all of your level 2 and level 3 modules below.
+        <br /> Level 1 modules do not count towards your final classification.
+        <br />Double-click a module to delete it.
+        <br />  (Credit transfers not yet supported).
+    </p>
     <div id="container">
         
         <div>
