Adding clear readme and improving classification message

--- a/index.html
+++ b/index.html
@@ -50,10 +50,13 @@
 
     </div>
 
-    <div id="modulesContainer">
+    <button id="calcButton">Calcuate Classification</button>
+
+    <div id="resultsContainer">
     </div>
 
-    <button id="calcButton">Calcuate Classification</button>
+    <div id="modulesContainer">
+    </div>
 
     <script src="app.js"></script>
 </body>
